--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
