--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@popperjs/core": "^2.11.8",
     "axios": "^1.10.0",
     "bootstrap": "^5.3.7",
+    "bootstrap-icons": "^1.13.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   },
